--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -274,6 +274,17 @@
 
         <div id="keepersContainer" class="keepers-container" hidden></div>
 
+        <div id="keepersFallbackNotice" class="keepers-empty subtle" hidden></div>
+
+        <div id="keepersPreviousWrapper" class="keepers-previous" hidden>
+          <div class="keepers-previous-header">
+            <h3 id="keepersPreviousHeading" class="keepers-previous-title">Last Season Keepers</h3>
+            <p id="keepersPreviousMeta" class="keepers-previous-note"></p>
+          </div>
+          <div id="keepersPreviousEmpty" class="keepers-empty subtle" hidden>No keepers recorded for last season.</div>
+          <div id="keepersPreviousContainer" class="keepers-container keepers-container-previous" hidden></div>
+        </div>
+
         <div id="keepersOrphanNotice" class="keepers-empty subtle" hidden></div>
       </div>
     </section>
