modularized keepers logic in draft tab

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,7 +12,7 @@
   <script defer src="{{ url_for('static', filename='player_contributions.js') }}"></script>
   <script defer src="{{ url_for('static', filename='navbar.js') }}"></script>
   <script defer src="{{ url_for('static', filename='team_logo.js') }}"></script>
-  <script defer src="{{ url_for('static', filename='draft.js') }}"></script>
+  <script type="module" src="{{ url_for('static', filename='draft.js') }}"></script>
   <script defer src="{{ url_for('static', filename='trade_analyzer.js') }}"></script>
 </head>
 <body>
