--- a/templates/about.html
+++ b/templates/about.html
@@ -14,6 +14,7 @@
     <div class="navbar-links">
       <a href="{{ url_for('dashboard') }}">Dashboard</a>
       <a href="{{ url_for('about') }}">About</a>
+      <a href="{{ url_for('ironman_rankings') }}" target="_blank" rel="noopener">Ironman Rankings</a>
       <a href="https://github.com/AlexIbby/fantasyBasketball" target="_blank">GitHub</a>
       <a href="{{ url_for('logout') }}">Logout</a>
     </div>
